<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            />

    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/button_logout"
        android:textSize="12sp"
        android:background="@color/red_nomal"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/scroll_view_custom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/abl_toolbar"
        android:layout_above="@+id/button_logout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.bingshanguxue.vector_uikit.SettingsItem
                android:id="@+id/item_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:layout_marginTop="@dimen/default_margin_top"
                app:src="@drawable/icon_setting_profile"
                app:text="@string/label_settings_user_profile"
                app:position="top"/>
            <com.bingshanguxue.vector_uikit.SettingsItem
                android:id="@+id/item_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                app:src="@drawable/icon_settings_account"
                app:text="@string/label_settings_account"
                app:position="center" />
            <com.bingshanguxue.vector_uikit.SettingsItem
                android:id="@+id/item_general"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                app:src="@drawable/icon_setting_general"
                app:text="@string/label_settings_user_profile"
                app:position="bottom" />
            <com.bingshanguxue.vector_uikit.SettingsItem
                android:id="@+id/item_customer_service"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:layout_marginTop="@dimen/space_primary"
                app:src="@drawable/icon_settings_customer_service"
                app:text="@string/label_settings_customer_center"
                app:position="single"/>

            <TextView
                android:id="@+id/tv_version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/space_primary"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
