<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/scroll_view_custom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/abl_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/tv_appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_top"
                android:gravity="center"
                android:text="@string/app_name"/>

            <com.mfh.framework.uikit.compound.SettingsItem
                android:id="@+id/item_app_description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:layout_marginTop="@dimen/default_margin_top"
                app:logoSrc="@drawable/icon_setting_profile"
                app:position="top"
                app:text="@string/label_app_descriptioin"/>

            <com.mfh.framework.uikit.compound.SettingsItem
                android:id="@+id/item_licience"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                app:logoSrc="@drawable/icon_settings_account"
                app:position="bottom"
                app:text="@string/label_user_license"/>

            <TextView
                android:id="@+id/tv_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
